<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.laundryday.app.lewisrhine.laundryday.AddToCardFragment">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/exactAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="4"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/$"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/exactAmount"
            android:layout_toStartOf="@+id/exactAmount"
            android:text="@string/money_symbol"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40sp" />
    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/addTenButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ten_dollars"
            android:textSize="30sp" />

        <Button
            android:id="@+id/addFiveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five_dollars"
            android:textSize="30sp" />


        <Button
            android:id="@+id/addTwentyButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twenty_dollars"
            android:textSize="30sp" />
    </LinearLayout>

    <Space
        android:id="@+id/centerSpace"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <View
        android:id="@+id/buttonBorder"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_string" />

        <Button
            android:id="@+id/setButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_string" />


    </LinearLayout>
</LinearLayout>
