<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.laundryday.app.lewisrhine.laundryday.SetLoadFragment">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <TextView
            android:id="@+id/costTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/will_cost_string"

            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/costNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/costTest"
            android:layout_toRightOf="@id/costTest"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/doneByTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/costTest"
            android:text="@string/be_done_by_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/doneByNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/costNumber"
            android:layout_toEndOf="@id/doneByTest"
            android:layout_toRightOf="@id/doneByTest"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <View
        android:id="@+id/topBorder"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/relativeLayout"
        android:background="?android:attr/dividerHorizontal" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/topBorder"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/washerNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/washer_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/washerNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/washerNumberText"
            android:layout_centerHorizontal="true"
            android:inputType="number" />

        <TextView
            android:id="@+id/dryerNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/dryer_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/dryerNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dryerNumberText"

            android:inputType="number" />

        <TextView
            android:id="@+id/loadsNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/loads_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/loadsNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/loadsNumberText"
            android:inputType="number" />


    </RelativeLayout>

    <View
        android:id="@+id/buttonBorder"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@id/relativeLayout2"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBorder"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setLoadsCancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/setLoadsSetButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/set_string" />


    </LinearLayout>
</RelativeLayout>